# operators-rs

./: Cargo.toml
operators/: Cargo.toml  build.rs
operators/src/: lib.rs
operators/src/add/: args.rs  mod.rs
operators/src/add/common_cpu/: mod.rs
operators/src/add/cuda/: mod.rs
operators/src/add_rows/: args.rs  mod.rs
operators/src/add_rows/common_cpu/: mod.rs
operators/src/add_rows/cuda/: mod.rs
operators/src/all_reduce/: args.rs  common_cpu.rs  infini.rs  nccl.rs
operators/src/attention/: args.rs  cuda.rs  mod.rs  mthreads_gpu.rs  operator.rs
operators/src/attention_kv_cached/: args.rs  cuda.rs  mod.rs  operator.rs
operators/src/broadcast/: args.rs
operators/src/broadcast/common_cpu/: mod.rs
operators/src/broadcast/nccl/: mod.rs
operators/src/common/: blob.rs  mod.rs  pool.rs
operators/src/conv/: args.rs  im2col.rs  mod.rs
operators/src/fuesd_softmax/: args.rs  mod.rs
operators/src/fuesd_softmax/common_cpu/: mod.rs
operators/src/fuesd_softmax/cuda/: fused_softmax.cuh  mod.rs
operators/src/fuesd_softmax/infini/: mod.rs
operators/src/fuesd_softmax/mthreads_gpu/: mod.rs
operators/src/fuesd_softmax/opencl/: mod.rs
operators/src/gelu/: args.rs  mod.rs
operators/src/gelu/common_cpu/: mod.rs
operators/src/gelu/cuda/: mod.rs
operators/src/handle/: mod.rs
operators/src/handle/common_cpu/: inproc_node.rs
operators/src/handle/cuda/: alloc.rs  library.rs  module.rs
operators/src/handle/cuda/cxx/: metax.lua
operators/src/handle/infini/: ccl.rs  mod.rs
operators/src/handle/mthreads_gpu/: mod.rs  tensor.rs  wrapper.h
operators/src/layer_norm/: args.rs  mod.rs
operators/src/layer_norm/common_cpu/: mod.rs
operators/src/layer_norm/cuda/: mod.rs
operators/src/mat_mul/: args.rs  mod.rs
operators/src/mat_mul/common_cpu/: mod.rs
operators/src/mat_mul/cuda/: mod.rs
operators/src/mat_mul/infini/: mod.rs
operators/src/mat_mul/mthreads_gpu/: mod.rs
operators/src/mat_mul/opencl/: mod.rs
operators/src/mlp/: mod.rs
operators/src/random_sample/: args.rs  mod.rs
operators/src/random_sample/common_cpu/: mod.rs
operators/src/random_sample/cuda/: ffi.rs  mod.rs  sample.cuh
operators/src/random_sample/infini/: mod.rs
operators/src/random_sample/mthreads_gpu/: mod.rs
operators/src/random_sample/opencl/: mod.rs
operators/src/random_sample_infini/: args.rs  mod.rs
operators/src/rearrange/: args.rs  mod.rs
operators/src/rearrange/common_cpu/: mod.rs
operators/src/rearrange/cuda/: mod.rs  rearrange.cuh
operators/src/rearrange/infini/: mod.rs
operators/src/rearrange/mthreads_gpu/: mod.rs
operators/src/rearrange/opencl/: mod.rs
operators/src/rms_norm/: args.rs  mod.rs
operators/src/rms_norm/common_cpu/: mod.rs
operators/src/rms_norm/cuda/: mod.rs
operators/src/rms_norm/infini/: mod.rs
operators/src/rms_norm/mthreads_gpu/: mod.rs
operators/src/rms_norm/opencl/: mod.rs
operators/src/rope/: args.rs  mod.rs
operators/src/rope/common_cpu/: mod.rs
operators/src/rope/cuda/: mod.rs  rope.cuh
operators/src/rope/infini/: mod.rs
operators/src/rope/mthreads_gpu/: mod.rs
operators/src/rope/opencl/: mod.rs
operators/src/swiglu/: args.rs  mod.rs
operators/src/swiglu/common_cpu/: mod.rs
operators/src/swiglu/cuda/: mod.rs
operators/src/swiglu/infini/: mod.rs
operators/src/swiglu/mthreads_gpu/: mod.rs
operators/src/swiglu/opencl/: mod.rs
