[workspace]
members = ["operators"]
resolver = "3"
package.edition = "2024"

[workspace.dependencies]
clrt = { git = "https://github.com/InfiniTensor/clrt", rev = "984ac7a" }
search-cl-tools = { git = "https://github.com/InfiniTensor/clrt", rev = "984ac7a" }

infini-rt = { git = "https://github.com/InfiniTensor/infini-toolkit", rev = "e8362c3" }
infini-op = { git = "https://github.com/InfiniTensor/infini-toolkit", rev = "e8362c3" }
infini-ccl = { git = "https://github.com/InfiniTensor/infini-toolkit", rev = "e8362c3" }
search-infini-tools = { git = "https://github.com/InfiniTensor/infini-toolkit", rev = "e8362c3" }

cuda = { git = "https://github.com/YdrMaster/cuda-driver", rev = "db4692c" }
cublas = { git = "https://github.com/YdrMaster/cuda-driver", rev = "db4692c" }
nccl = { git = "https://github.com/YdrMaster/cuda-driver", rev = "db4692c" }
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "db4692c" }
search-corex-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "db4692c" }
